--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,20 @@ services:
       db:
         condition: service_healthy
 
+  seed:
+    image: mariadb:11.3.2
+    command: ["/code/build-seeds.sh"]
+    volumes:
+      - "./schema:/code"
+    environment:
+      DATABASE_HOST: db
+      DATABASE_USER: limble-test
+      DATABASE_PASSWORD: limble-test-password
+      DATABASE_NAME: limble
+    depends_on:
+      db:
+        condition: service_healthy
+
   server:
     image: node:21.7.1-bookworm-slim
     command: ["npm", "start"]
@@ -38,10 +52,14 @@ services:
     ports:
       - "0.0.0.0:3000:3000"
     environment:
+      NODE_ENV: production
       DATABASE_HOST: db
       DATABASE_USER: limble-test
       DATABASE_PASSWORD: limble-test-password
       DATABASE_NAME: limble
+      CACHE_TIMEOUT_MINUTES: 5
+      API_PORT: 3000
+      LOG_LEVEL: debug
     depends_on:
       db:
         condition: service_healthy
