--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "mocha ./src/tests",
+    "test": "mocha ./src/tests/**/*.test.js",
+    "tests:all": "mocha ./src/tests/**/*.test.js",
+    "tests:unit": "mocha ./src/tests/unit/*.test.js",
+    "tests:integration": "mocha ./src/tests/integration/*.test.js",
     "test:watch": "mocha --watch ./src/tests/*.test.js",
     "docs": "apidoc -i ./src -o ./docs"
   },
@@ -21,7 +24,6 @@
   "devDependencies": {
     "apidoc": "^1.2.0",
     "chai": "^5.1.1",
-    "jest": "^29.7.0",
     "mocha": "^10.7.0",
     "supertest": "^7.0.0"
   }
